syntax = "proto3";

import "scalapb/scalapb.proto";
import "google/protobuf/timestamp.proto";

option (scalapb.options) = {
  package_name: "c.cqrs.offsetstore.proto"
  import: "c.cqrs.offsetstore.proto._"
  flat_package: true
};

message OffsetProto {
    oneof value {
        int64 sequence = 1;
        string timeBasedUUID = 2;
    }
}

message OffsetStore {
    string id = 1 [(scalapb.field).type = "c.cqrs.offsetstore.OffsetStoreEntity.OffsetStoreId"];
    OffsetProto offset = 2 [(scalapb.field).type = "akka.persistence.query.Offset", (scalapb.field).no_box = true];
}

message OffsetStoreCreatedEvent {

    option (scalapb.message).extends = "c.cqrs.offsetstore.OffsetStoreEntity.OffsetStoreEvent";

    string entityId = 1 [(scalapb.field).type = "c.cqrs.offsetstore.OffsetStoreEntity.OffsetStoreId"];
    OffsetProto offset = 2 [(scalapb.field).type = "akka.persistence.query.Offset", (scalapb.field).no_box = true];
    google.protobuf.Timestamp timestamp = 3 [(scalapb.field).type = "java.time.Instant", (scalapb.field).no_box = true];
}

message OffsetStoreUpdatedEvent {

    option (scalapb.message).extends = "c.cqrs.offsetstore.OffsetStoreEntity.OffsetStoreEvent";

    string entityId = 1 [(scalapb.field).type = "c.cqrs.offsetstore.OffsetStoreEntity.OffsetStoreId"];
    OffsetProto offset = 2 [(scalapb.field).type = "akka.persistence.query.Offset", (scalapb.field).no_box = true];
    google.protobuf.Timestamp timestamp = 3 [(scalapb.field).type = "java.time.Instant", (scalapb.field).no_box = true];
}

message OffsetStoreRemovedEvent {

    option (scalapb.message).extends = "c.cqrs.offsetstore.OffsetStoreEntity.OffsetStoreEvent";

    string entityId = 1 [(scalapb.field).type = "c.cqrs.offsetstore.OffsetStoreEntity.OffsetStoreId"];
    google.protobuf.Timestamp timestamp = 2 [(scalapb.field).type = "java.time.Instant", (scalapb.field).no_box = true];
}
